Simple visualization test

--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@ apply plugin: 'java'
 
 repositories
 {
+    jcenter()
     mavenCentral()
 }
  
 dependencies
 {
-    testCompile('org.junit.jupiter:junit-jupiter-api:5.1.0')
+	compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
    
     testRuntime(
             'org.junit.jupiter:junit-jupiter-engine:5.1.0',
